# ami-notifications-api

./: .buildpacks  .env  .env.development  .env.template  .env.tests  .gitignore  .pre-commit-config.yaml  CONTRIBUTING-BEHAVIOR.md  CONTRIBUTING.md  Makefile  Procfile  README.md  alembic.ini  app.py  applicationServerKey  biome.json  cron.json  manage.py  package-lock.json  package.json  public_key.pem  pyproject.toml  pyrightconfig.json  requirements.txt  scalingo.json  ssl-cert.pem  ssl-key.pem  vapid_keys.py
.github/workflows/: pytest.yml
adr/: 2025-11-28 notification with firebase.md
ami/: asgi.py  conftest.py  models.py  settings.py  urls.py  wsgi.py
ami/agenda/: api_urls.py  api_views.py  apps.py  schemas.py  serializers.py
ami/agent/: admin.py  apps.py  auth.py  decorators.py  models.py
ami/agent_admin/: api_views.py  apps.py  context_processors.py  forms.py  manage_urls.py  models.py  urls.py  utils.py  views.py
ami/amidsfr/: apps.py  forms.py  widgets.py
ami/api/: apps.py  urls.py
ami/authentication/: api_urls.py  api_views.py  apps.py  auth.py  decorators.py  exception.py  middleware.py  models.py  schemas.py  urls.py  utils.py  views.py
ami/catalog/: api_urls.py  api_views.py  apps.py  models.py  schemas.py  serializers.py
ami/fi/: api_exceptions.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  serializers.py  utils.py  views.py
ami/followup/: api_urls.py  api_views.py  apps.py  schemas.py  serializers.py
ami/notification/: api_urls.py  api_urls_v2.py  api_views.py  api_views_v2.py  apps.py  channel_consumer.py  channel_routing.py  models.py  push.py  serializers.py  tasks.py
ami/partner/: api_urls.py  api_views.py  apps.py  auth.py  models.py  serializers.py
ami/replication/: api_urls.py  api_views.py  app.py  apps.py  models.py  router.py
ami/service/: api_urls.py  api_views.py  apps.py  models.py  schemas.py  serializers.py
ami/tests/: utils.py
ami/user/: api_urls.py  api_views.py  apps.py  core_user_mapper.py  data.py  models.py  serializers.py  utils.py
ami/utils/: __init__.py  api_urls.py  api_views.py  apps.py  httpx.py  schemas.py  sentry.py  serializers.py  storage.py  views.py
app/: __init__.py  ami_admin.py  ami_admin_auth.py  auth.py  cli.py  database.py  database_operations.py  env.py  errors.py  httpx.py  models.py  partners.py  plugins.py  rvo.py  schemas.py  sentry.py  signals.py  utils.py  webpush.py
app/admin/: auth.py  routes.py
app/controllers/: auth.py  notification.py  partner.py  registration.py  scheduled_notification.py  user.py  utils.py
app/data/: holidays.py  internal.py  partners.py  routes.py  schemas.py
app/domain/: notification.py  registration.py  user.py
app/models/: business.py  database.py  endpoints.py
app/repositories/: notification.py  registration.py  user.py
app/rvo/: auth.py  routes.py
migrations/: env.py  script.py.mako
public/: admin.js  adminclo.js  ami-fs-test-login.js  index.html  index.js  manifest.json  sw.js
templates/: admin.html  adminclo.html  ami-fs-test-connected.html  ami-fs-test-login.html  base-rvo.html  base.html  index.html  rvo-detail.html  rvo-liste.html  rvo-logged-out.html
tests/: base.py  conftest.py  test_basic.py
(+511 files in other folders)
