[project]
name = "ami-notifications-api"
version = "0.1.0"
description = "AMI notifications API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "litestar[sqlalchemy,standard]>=2.15.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "types-requests>=2.32.0.20250328",
    "webpush>=1.0.5",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"] # also sort imports with an isort rule
