[project]
name = "ami-notifications-api"
version = "0.1.0"
description = "AMI notifications API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "litestar[sqlalchemy,standard]>=2.15.1",
    "sqlmodel>=0.0.24",
    "types-requests>=2.32.0.20250328",
    "webpush>=1.0.5",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "ipdb>=0.13.13",
    "pre-commit>=4.2.0",
    "pre-commit-uv>=4.1.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.11.2",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"] # also sort imports with an isort rule

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
